IPv6/k8s/color-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: color-route
  namespace: faces
spec:
  parentRefs:
  - group: core
    kind: Service
    name: color
    port: 80
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: color
      port: 80
      weight: 80
    - group: ""
      kind: Service
      name: color-sma-v6
      port: 80
      weight: 20
