IPv6/k8s/network-auth-1.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sma-dual-allow
  namespace: faces
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: sma-dual-net
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: faces-server
