IPv6/k8s/tls-auth.yaml
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: sma-dual-allow
  namespace: faces
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: MeshTLSAuthentication
    name: faces-mesh-tls
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: faces-server
